--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": ".",
-  "private": "true",
+  "name": "ionic-gulp-seed",
+  "private": "false",
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.0.0-beta.11"
   }
