--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": ".",
+  "name": "ionic-gulp-seed",
   "version": "1.0.0",
-  "description": ".: An Ionic project",
+  "description": ".: An Ionic seed project",
   "dependencies": {
     "gulp": "^3.5.6",
     "gulp-sass": "^0.7.1",
