--- a/package.json
+++ b/package.json
@@ -3,16 +3,30 @@
   "version": "1.0.0",
   "description": ".: An Ionic seed project",
   "dependencies": {
+    "yargs": "~1.2.1",
+    "bower": "^1.3.3",
+    "shelljs": "^0.3.0",
+    "coffee-script": "~1.7.1",
+    "jshint-stylish": "~0.1.5",
+    "run-sequence": "~0.3.6",
+
     "gulp": "^3.5.6",
+    "gulp-load-plugins": "~0.4.0",
     "gulp-sass": "^0.7.1",
+    "gulp-coffee": "~1.4.1",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0"
+    "gulp-rename": "^1.2.0",
+    "gulp-util": "^2.2.14",
+    "gulp-size": "~0.1.3",
+    "gulp-angular-templatecache": "^1.1.0",
+    "gulp-jade": "0.5.0",
+    "gulp-ng-classify": "~4.0.0",
+    "gulp-plumber": "0.6.1",
+    "gulp-notify": "1.2.5",
+    "gulp-insert": "0.3.0",
+    "gulp-jshint": "~1.5.1"
   },
   "devDependencies": {
-    "bower": "^1.3.3",
-    "gulp-util": "^2.2.14",
-    "shelljs": "^0.3.0",
-    "coffee-script": "~1.7.1"
   }
 }
